--- a/website/index.html
+++ b/website/index.html
@@ -50,6 +50,17 @@
     <link rel="apple-touch-icon-precomposed" href="img/ico/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="img/ico/favicon.png">
 
+    <script>
+     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+     ga('create', 'UA-73553423-1', 'auto');
+     ga('send', 'pageview');
+
+    </script>
+
   </head>
   <body>
     <div id="page-top"></div>
@@ -361,47 +372,47 @@
                   <div class="col-md-6">
                     <h2>Contactez-nous</h2>
                   </div>
+                </div>
               </div>
             </div>
+
+            <form action="#" id="contact-form">
+              <input name="action" value="send_contact_form" type="hidden">
+
+              <div class="alert hidden" id="contact-form-msg"></div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
+                    <input name="name" class="form-control" placeholder="Nom" type="text">
+                  </div>
+                  <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-envelope fa-fw"></i></span>
+                    <input name="email" class="form-control" placeholder="Addresse Email" type="text">
+                  </div>
+                  <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-phone fa-fw"></i></span>
+                    <input name="phone" class="form-control" placeholder="Numero Téléphone" type="text">
+                  </div>
+                  <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-home fa-fw"></i></span>
+                    <input name="address" class="form-control" placeholder="Addresse" type="text">
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="input-group textbox">
+                    <span class="input-group-addon"><i class="fa fa-pencil fa-fw"></i></span>
+                    <textarea class="form-control" name="message" cols="30" rows="10" placeholder="Message"></textarea>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6 col-md-offset-6">
+                  <button class="btn btn-color1 btn-contact-form">Envoyer <i class="fa fa-angle-right"></i></button>
+                </div>
+              </div>
+            </form>
           </div>
-
-          <form action="#" id="contact-form">
-            <input name="action" value="send_contact_form" type="hidden">
-
-            <div class="alert hidden" id="contact-form-msg"></div>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-                  <input name="name" class="form-control" placeholder="Nom" type="text">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-envelope fa-fw"></i></span>
-                  <input name="email" class="form-control" placeholder="Addresse Email" type="text">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-phone fa-fw"></i></span>
-                  <input name="phone" class="form-control" placeholder="Numero Téléphone" type="text">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-home fa-fw"></i></span>
-                  <input name="address" class="form-control" placeholder="Addresse" type="text">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="input-group textbox">
-                  <span class="input-group-addon"><i class="fa fa-pencil fa-fw"></i></span>
-                  <textarea class="form-control" name="message" cols="30" rows="10" placeholder="Message"></textarea>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6 col-md-offset-6">
-                <button class="btn btn-color1 btn-contact-form">Envoyer <i class="fa fa-angle-right"></i></button>
-              </div>
-            </div>
-          </form>
-        </div>
       </section>
 
       <!--Address start-->
@@ -443,24 +454,24 @@
         </div>
       </footer>
       <!--Footer end-->
-    </div>
-    <!--End content before Slider-->
+        </div>
+        <!--End content before Slider-->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
-    <script src="bower_components/jquery-placeholder/jquery.placeholder.min.js"></script>
-    <script src="bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
-    <script src="bower_components/jquery-animatenumber/jquery.animateNumber.min.js"></script>
-    <script src="bower_components/bootstrap-3-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="bower_components/jquery-placeholder/jquery.placeholder.min.js"></script>
+        <script src="bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
+        <script src="bower_components/jquery-animatenumber/jquery.animateNumber.min.js"></script>
+        <script src="bower_components/bootstrap-3-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <!-- Google Maps Api -->
-    <script style="" type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
+        <!-- Google Maps Api -->
+        <script style="" type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
 
 
-    <script src="js/custom.js"></script>
+        <script src="js/custom.js"></script>
 
   </body>
 </html>
