--- a/website/index.html
+++ b/website/index.html
@@ -60,6 +60,7 @@
      ga('send', 'pageview');
 
     </script>
+    <meta name="google-site-verification" content="NNHCp1gaxAmLtN7q8xfIGh4KICO8_bP0n8LaAUSHpS8" />
 
   </head>
   <body>
