Updated brands and opening hours

--- a/website/index.html
+++ b/website/index.html
@@ -291,26 +291,22 @@
               <div class="row text-left">
                 <div class="col-md-4 col-sm-12">
                   <ul class="list-group room-tabs-checklist left">
-                    <li class="list-group-item"><i class="fa fa-angle-right"></i> Absorba</li>
                     <li class="list-group-item"><i class="fa fa-angle-right"></i> Gymp</li>
                     <li class="list-group-item"><i class="fa fa-angle-right"></i> 3Pommes</li>
                     <li class="list-group-item"><i class="fa fa-angle-right"></i> Catimini</li>
-                    <li class="list-group-item"><i class="fa fa-angle-right"></i> Eliane & Lena</li>
+                    <li class="list-group-item"><i class="fa fa-angle-right"></i> IKKS Junior</li>
                   </ul>
                 </div>
                 <div class="col-md-4 col-sm-12">
                   <ul class="list-group room-tabs-checklist right">
-                    <li class="list-group-item"><i class="fa fa-angle-right"></i> Monnalisa</li>
-                    <li class="list-group-item"><i class="fa fa-angle-right"></i> Scotch R'Belle (pour les filles)</li>
-                    <li class="list-group-item"><i class="fa fa-angle-right"></i> Scotch Shrunk (pour les garçons)</li>
                     <li class="list-group-item"><i class="fa fa-angle-right"></i> Temps des Cerises</li>
                     <li class="list-group-item"><i class="fa fa-angle-right"></i> Japan Rags</li>
+                    <li class="list-group-item"><i class="fa fa-angle-right"></i> Sorry 4 The Mess</li>
                   </ul>
                 </div>
                 <div class="col-md-4 col-sm-12">
                   <ul class="list-group room-tabs-checklist right">
-                    <li class="list-group-item"><i class="fa fa-angle-right"></i> Brian and Nephew</li>
-                    <li class="list-group-item"><i class="fa fa-angle-right"></i> La Fée Maraboutée</li>
+                    <li class="list-group-item"><i class="fa fa-angle-right"></i> Brian & Nephew</li>
                     <li class="list-group-item"><i class="fa fa-angle-right"></i> Eddie Pen</li>
                     <li class="list-group-item"><i class="fa fa-angle-right"></i> Kiwi</li>
                   </ul>
@@ -338,7 +334,7 @@
               <div class="service-icon"><i class="fa fa-clock-o"></i></div>
               <h3>Lundi</h3>
 
-              <p>14:30-18:00</p>
+              <p>FERMÉ</p>
             </div>
             <!-- Service Item end -->
 
